--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,5 @@
 @media screen and (max-width:768px) {
 
-
-
   .image{
     width:100%;
     height: 100vw;
@@ -40,7 +38,7 @@
   .intDivLink img{
     width: 30%;
     margin-left: 35%;
-    padding: 5% 0;
+    padding: 5% 0
     }
 
   .socialLink p{
