--- a/css/general.css
+++ b/css/general.css
@@ -52,12 +52,12 @@ a{
 }
 
 .extDivLink p{
-  text-align: center;
+  text-align: center
 
 }
 
 .extDivLink i{
-  color: #000;
+  color: #000
 }
 
 .iconSrteam {
@@ -66,16 +66,14 @@ a{
   -webkit-transition: opacity 0.4s ease-in;
   -moz-transition: opacity 0.4s ease-in;
   -o-transition: opacity 0.4s ease-in;
-  transition: opacity 0.4s ease-in;
+  transition: opacity 0.4s ease-in
   }
-
-
 
 .socialLink{
     background-color: #444;
     width: 100%;
     margin: 0;
-    padding-top: 5%;
+    padding-top: 5%
   }
 .socialLink p{
     text-align: center;
@@ -84,20 +82,16 @@ a{
 
 .socialLink i{
       color: #aaa;
-
       transition: color 0.4s ease-in-out
     }
-
-
 
 footer {
         background-color: #222;
         color: #fff;
-        margin: 0;
+        margin: 0
       }
 
 footer p{
-
         text-align: center;
         padding: 5%
       }
